crates/mir/tests/fixtures/errors/borrowck_write_under_ref.snap
---
source: crates/mir/tests/lowering_errors.rs
assertion_line: 27
expression: err.to_string()
input_file: tests/fixtures/errors/borrowck_write_under_ref.fe
---
error[10-0002]: borrow conflict in `fn borrowck_write_under_ref`
  ┌─ borrowck_write_under_ref.fe:4:5
  │
3 │     let r: ref u256 = ref x
  │                           - `x` is borrowed here
4 │     x = 1
  │     ^^^^^ cannot write through an active `ref` borrow
